[package]
name = "lib-tic-tac-toe"
version = "0.1.0"
edition = "2021"
authors = ["P. Todd Decker <ptdecker@mac.com>"]

[dependencies]
rand = "0.9.0-alpha.1"



axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3.11.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mongodb = "3.1.0"
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with-3"] }
rust_decimal = "1.36.0"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
anyhow = "1.0.91"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors", "timeout", "compression-gzip"] }
serde_json = "1"

config = "0.14.1"
jwtk = "0.3.0"
chrono = "0.4.38"
serde_urlencoded = "0.7.1"
reqwest = { version = "^0.12.9", features = ["json", "multipart"] }
futures = "0.3.31"
time = "0.3.37"

aws-sdk-secretsmanager = "1.42.0"
aws-config = "1.5.5"
aws-sdk-s3 = { version = "1.60.0" }

base64 = "0.22.1"
prost = "0.13.1"
tonic = "0.12.3"

solana-sdk = "2.1.1"
solana-client = "2.1.1"
spl-associated-token-account = "6.0.0"

utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui  = { version = "8.0.3", features = ["axum", "reqwest"] }

uuid = { version = "1", features = ["v4"] }


[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
